# ai-forex-trading-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_FEATURES_COMPLETE.md  ADVANCED_RISK_MANAGEMENT_GUIDE.md  BIG_MONEY_HUNTER_COMPLETE.md  BOT_STOP_ISSUE_FIXED.md  BULLETPROOF_GUIDE.md  CHANGELOG.md  CLI_TELEGRAM_GUIDE.md  CONTRIBUTING.md  CREATE_TOKENS.py  Dockerfile  FINAL_SOLUTION.md  FIX_API_NOW.txt  FIX_API_TOKENS.py  GODLIKE_STATUS_REPORT.md  LAUNCH_AUTONOMOUS_BOT.bat  LAUNCH_BOT.bat  LAUNCH_MT5_BOT.bat  LICENSE  MAIN_PY_COMPLETE_FIX.md  MT5_INITIALIZATION_FIXED.md  MT5_LOGIN_GUIDE.md  MT5_SYMBOL_WARNINGS_RESOLVED.md  MT5_TRADING_SETUP.md  PROFIT_PROTECTION_GUIDE.md  PROJECT_STATUS.md  README.md  README_NEW.md  RESOLUTION_GUIDE.py  RUN_GODLIKE_BOT.bat  SECURITY.md  activate_aggressive_trading.py  activate_demo_training.py  advanced_test.py  aggressive_config_update.py  ai_integration_system.py  ai_model.py  (+131 more)
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md  CI_FIXES_COMPLETE.md  DEMO_INSTRUCTIONS.md  GITHUB_REPOSITORY_SETUP.md  GITHUB_SETUP.md  SECURITY_CLEANUP.md  TRANSFORMATION_COMPLETE.md  demo_interactive.html  record_demo.bat
docs/archive/legacy/: FIXES_APPLIED.md  GET_MT5_CREDENTIALS.md  GODLIKE_PROTECTION_SUMMARY.md  RED_ERRORS_FIXED.md
docs/archive/old_readmes/: README_STUNNING_20250816.md
docs/images/: README.md
docs/legacy/: BOT_FIXES_COMPLETE.md  INDEX.md  ULTIMATE_SOLUTION.md  VOLUME_MIN_FIX_SUMMARY.md
docs/screenshots/: README.md  ai_signals.png.placeholder  demo.gif.placeholder  live_chart.png.placeholder  streamlit_dashboard.png.placeholder
scripts/: API_FIX_GUIDE.py  DEMO_TRADING_STATUS.md  ENHANCED_FEATURES.md  FIX_API_TOKENS.py  LAUNCH_AUTONOMOUS.ps1  LAUNCH_BULLETPROOF.bat  LAUNCH_GODLIKE_BOT.bat  PREDICTION_ERROR_FIXED.md  README.md  RED_SQUIGGLY_FIXES.md  ROBUST_START.bat  START_BULLETPROOF_BOT.bat  activate_aggressive_trading.py  activate_demo_training.py  advanced_deriv_test.py  advanced_mt5_order_test.py  advanced_test.py  aggressive_config_update.py  aggressive_small_account_fix.py  ai_integration_system.py  ai_model.py  api_test.py  auto_connection_manager.py  autonomous_trading_bot.py  backtesting_analytics.py  bulletproof_launch.py  bulletproof_patches.py  check_account_status.py  check_available_symbols.py  check_bot_status.py  check_godlike_status.py  check_market_status.py  check_mt5_status.py  check_mt5_terminal.py  complete_fix_and_restart.py  comprehensive_api_fix.py  comprehensive_index_check.py  comprehensive_status.py  config_fixed.py  connection_manager.py  (+147 more)
src/: __init__.py  advanced_config.py  ai_model.py  config.example.py  indicators.py  main.py  mt5_integration.py  performance_analytics.py  safe_logger.py
tests/: __init__.py  test_imports.py  test_sanity.py
ui/: __init__.py  enhanced_dashboard.py  streamlit_app.py
