[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-forex-trading-bot"
version = "2.0.0"
description = "Advanced AI-powered forex trading bot with ML-driven strategies"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chris", email = "your.email@example.com"}
]
keywords = ["forex", "trading", "ai", "machine-learning", "metatrader5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "MetaTrader5>=5.0.44",
    "joblib>=1.3.0",
    "ta>=0.10.0",
    "python-telegram-bot>=20.0",
    "requests>=2.28.0",
    "websockets>=11.0.0",
    "pytz>=2022.7",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/chris22622/ai-forex-trading-bot"
Repository = "https://github.com/chris22622/ai-forex-trading-bot"
Issues = "https://github.com/chris22622/ai-forex-trading-bot/issues"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","B"]
ignore = ["E203","E266"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
